WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140806
QLPreviewMenuItem popovers don't close when the page scrolls
https://bugs.webkit.org/show_bug.cgi?id=140806
Summary
QLPreviewMenuItem popovers don't close when the page scrolls
Tim Horton
Reported
2015-01-22 18:23:55 PST
QLPreviewMenuItem popovers don't close when the page scrolls
Attachments
Patch
(10.09 KB, patch)
2015-01-22 18:24 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-01-22 18:24:49 PST
Created
attachment 245188
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2015-01-22 18:26:27 PST
<
rdar://problem/19573674
>
Tim Horton
Comment 3
2015-01-23 11:44:04 PST
http://trac.webkit.org/changeset/179014
Tim Horton
Comment 4
2015-01-23 12:54:13 PST
build fix
http://trac.webkit.org/changeset/179023
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug