Source/WebKit2/UIProcess/API/mac/WKView.mm
@@ -4354,6 +4354,8 @@ static NSString *pathWithUniqueFilenameForPath(NSString *path)
 
     [self _setTextIndicator:nullptr fadeOut:NO];
 
+    [_data->_immediateActionController dismissContentRelativeChildWindows];
+
     static_cast<PageClient&>(*_data->_pageClient).dismissCorrectionPanel(ReasonForDismissingAlternativeTextIgnored);
 }
 
